# model-training

./: .coverage  .pylintrc  LICENSE  README.md  c1_BoW_Sentiment_Model.pkl  c2_Classifier_Sentiment_Model  coverage.xml  dvc.yaml  pyproject.toml  requirements.txt  server.py  test_acc.pkl  test_acc.txt  tests-report.xml
.dvc/: config
.github/workflows/: Test.yml  test.yml
data/output/: .gitignore  model_metrics.json
data/processed/: .gitignore  c1_BoW_Sentiment_Model.pkl
data/raw/: .gitignore  train_dataset.csv  train_dataset.csv.dvc
data/reports/: mllint.txt  pylint.txt
src/: data_preprocessing.py  evaluate.py  get_data.py  read_data.py  server.py  train.py
tests/: conftest.py  test_data_features.py  test_data_slices.py  test_evaluate.py  test_get_data.py  test_monitoring.py  test_preprocessing.py  test_train.py
