[tool.poetry]
name = "model-training"
version = "0.1.0"
description = "The model-training package for REMLA23-team14. Stores the model-training and evaluation pipeline for sentiment analysis on restaurant reviews."
authors = ["REMLA23-team14"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
Flask = "^2.3.2"
markupsafe = "^2.1.2"
flasgger = "^0.9.7.1"
libpy = {git = "https://github.com/remla23-team14/libpy"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
dslinter = "^2.0.9"
mllint = "^0.12.2"
dvc = "^2.58.1"
mypy = "^0.931"
isort = "^5.12.0"
black = "^23.3.0"
bandit = "^1.7.5"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
dvc-gs = "^2.22.1"

[tool.isort]
profile = "black"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.mllint.testing]
report = "tests-report.xml"

[tool.mllint.testing.coverage]
report = "coverage.xml"
targets = { line = 80.0 } 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
